# yummy-wallets-service

./: .dockerignore  .env.example  .gitignore  DESIGN.md  Makefile  README.md  alembic.ini  docker-compose.local.yml  pyproject.toml  yummy_wallet.postman_collection.json
Docker/local/: Dockerfile
alembic/: env.py
alembic/versions/: b848d52d4281_tabla_usuarios.py  f2294b1b360f_creacion_de_la_tabla_wallet_y_tansaccion.py
app/: exceptions.py  main.py
app/api/: __init__.py  auth.py  deps.py  productos.py  users.py  wallets.py
app/auth/: security.py
app/db/: sessions.py
app/models/: __init__.py  api_response.py  producto.py  user.py  wallet.py
app/repositories/: __init__.py  producto_repository.py  transaction_repository.py  user_repository.py  wallet_repository.py
app/services/: __init__.py
app/services/producto/: __init__.py  actualizar_producto.py  crear_producto.py  eliminar_producto.py  leer_producto.py  producto_service.py
app/services/user/: __init__.py  create_user.py  delete_user.py  login_user.py  update_user.py  (+1 more)
shared/: config.py
tests/: conftest.py
tests/repositories/: test_producto_repository.py  test_transaction_repository.py  test_user_repository.py  test_wallet_repository.py
tests/services/: test_actualizar_producto.py  test_actualizar_user.py  test_crear_producto.py  test_crear_user.py  test_create_wallet.py  test_deposit_wallet.py  test_eliminar_producto.py  test_eliminar_user.py  test_get_wallet_summary.py  test_get_wallet_transactions.py  test_leer_producto.py  test_leer_user.py  test_transfer_wallet.py  test_withdraw_wallet.py
(+8 files in other folders)
