[project]
name = "yummy-backend"
version = "0.1.0"
description = "FastAPI backend para prueba tecnica de yummy."
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "sqlmodel==0.0.22",
    "psycopg2-binary==2.9.10",
    "alembic==1.13.3",
    "asyncpg>=0.31.0",
    "aiosqlite>=0.20.0",
    "greenlet>=3.3.2",
    "starlette>=0.37.0",
    "bcrypt>=4.0.0",
    "python-jose[cryptography]>=3.3.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.7",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.ruff]
select = ["F401"]

[tool.ruff.lint]
fixable = ["F401"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
